// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Russian language Empty input 1`] = `
Array [
  Object {
    "id": 10,
    "rating": 4,
    "title": "Батарейки алкалиновые — 12 штук в упаковке",
  },
  Object {
    "id": 20,
    "rating": 3,
    "title": "Кабель Lightning — USB-A",
  },
  Object {
    "id": 30,
    "rating": 2,
    "title": "Электрическая зубная щётка",
  },
  Object {
    "id": 40,
    "rating": 1,
    "title": "Вакуумные компресионные мешки",
  },
]
`;

exports[`Russian language Equality 1`] = `
Array [
  Object {
    "id": 30,
    "rating": 2,
    "title": "[Электрическая] [зубная] [щётка]",
  },
]
`;

exports[`Russian language Partiles 1`] = `
Array [
  Object {
    "id": 40,
    "rating": 1,
    "title": "[В]акуумные компресионные мешки",
  },
  Object {
    "id": 10,
    "rating": 4,
    "title": "Батарейки алкалиновые — 12 штук [в] упаковке",
  },
]
`;

exports[`Russian language Stemming 1`] = `Array []`;
